View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032533 | Open CASCADE | OCCT:Visualization | public | 2021-08-12 15:46 | 2021-08-14 14:02 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032533: Visualization, TKOpenGl - suppress error reported on Intel drivers due to OpenGL 4.5 specs violation | ||||
Description | The following error is currently reported on Intel drivers:TKOpenGL | Type: Error | ID: 0 | Serverity: High | Message: OpenGL context reports version 4.6 but does not export required functions for 4.5 (glGetnCompressedTexImage) Please report this issue to OpenGL driver vendor 'intel' It seems that Intel engineers are not going to fix the bug in a meaningful future (it is already 2 years passed since first reports). Therefore, it is proposed lowering message priority for this specific issue. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32533 has been created by kgv. SHA-1: 1f3713b250186f728237683d18a3adc03478b0d2 Detailed log of new commits: Author: kgv Date: Thu Aug 12 15:50:16 2021 +0300 0032533: Visualization, TKOpenGl - suppress error reported on Intel drivers due to OpenGL 4.5 specs violation OpenGl_GlCore45 - removed a couple of FFP-related functions introduced by OpenGL 4.5 Compatible Profile, but not Core Profile. OpenGl_GlFunctions::load() now tries to load a set of functions from GL_ARB_robustness extension (having ARB suffix) to fill OpenGL 4.5 function table, and from GL_ARB_indirect_parameters extension to fill missing items in OpenGL 4.6 function table on Intel drivers. |
|
Branch CR32533 has been updated forcibly by kgv. SHA-1: 9e7f4e048e9c6d8ddea5a62ded053568d8a99151 |
|
Patch is ready for review - OCCT: branch CR32533. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32533-master-KGV/ |
|
The patch was reviewed without remarks |
|
Combination - OCCT branch : IR-2021-08-13 master SHA - 7b5f784419eb9fd9a1d3dc69eff89d3e720d6e97 a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-08-13 SHA - 8dc957c07e49e8db2f1330ec126160fe1c7eb89d was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17368.20000000041 / 17370.70000000038 [-0.01%] Products Total CPU difference: 11492.330000000085 / 11466.840000000084 [+0.22%] Windows-64-VC14: OCCT Total CPU difference: 19143.8125 / 19180.875 [-0.19%] Products Total CPU difference: 12803.65625 / 12837.4375 [-0.26%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32533 has been deleted by mnt. SHA-1: 9e7f4e048e9c6d8ddea5a62ded053568d8a99151 |
occt: master fceeb829 2021-08-12 12:50:16 Committer: bugmaster Details Diff |
0032533: Visualization, TKOpenGl - suppress error reported on Intel drivers due to OpenGL 4.5 specs violation OpenGl_GlCore45 - removed a couple of FFP-related functions introduced by OpenGL 4.5 Compatible Profile, but not Core Profile. OpenGl_GlFunctions::load() now tries to load a set of functions from GL_ARB_robustness extension (having ARB suffix) to fill OpenGL 4.5 function table, and from GL_ARB_indirect_parameters extension to fill missing items in OpenGL 4.6 function table on Intel drivers. Warning message (trace level) is now reported instead of error in case of fallback usage. |
Affected Issues 0032533 |
|
mod - src/OpenGl/OpenGl_GlCore45.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_GlFunctions.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_GlFunctions.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-08-12 15:46 | kgv | New Issue | |
2021-08-12 15:46 | kgv | Assigned To | => kgv |
2021-08-12 15:46 | kgv | Relationship added | child of 0030729 |
2021-08-12 15:47 | kgv | Relationship added | child of 0032217 |
2021-08-12 15:50 | git | Note Added: 0103154 | |
2021-08-12 15:51 | git | Note Added: 0103155 | |
2021-08-12 17:18 | kgv | Note Added: 0103161 | |
2021-08-12 17:18 | kgv | Assigned To | kgv => osa |
2021-08-12 17:18 | kgv | Status | new => resolved |
2021-08-12 17:39 | osa | Note Added: 0103162 | |
2021-08-12 17:39 | osa | Assigned To | osa => bugmaster |
2021-08-12 17:39 | osa | Status | resolved => reviewed |
2021-08-14 13:23 | bugmaster | Note Added: 0103202 | |
2021-08-14 13:23 | bugmaster | Status | reviewed => tested |
2021-08-14 13:26 | bugmaster | Test case number | => Not required |
2021-08-14 13:31 | bugmaster | Changeset attached | => occt master fceeb829 |
2021-08-14 13:31 | bugmaster | Status | tested => verified |
2021-08-14 13:31 | bugmaster | Resolution | open => fixed |
2021-08-14 14:02 | git | Note Added: 0103219 |