src/OpenGl/OpenGl_GlCore45.hxx
@@ -134,18 +134,6 @@ public: //! @name OpenGL 4.5 additives to 4.4
   using theBaseClass_t::glGetnUniformiv;
   using theBaseClass_t::glGetnUniformuiv;
   using theBaseClass_t::glReadnPixels;
-  using theBaseClass_t::glGetnMapdv;
-  using theBaseClass_t::glGetnMapfv;
-  using theBaseClass_t::glGetnMapiv;
-  using theBaseClass_t::glGetnPixelMapfv;
-  using theBaseClass_t::glGetnPixelMapuiv;
-  using theBaseClass_t::glGetnPixelMapusv;
-  using theBaseClass_t::glGetnPolygonStipple;
-  using theBaseClass_t::glGetnColorTable;
-  using theBaseClass_t::glGetnConvolutionFilter;
-  using theBaseClass_t::glGetnSeparableFilter;
-  using theBaseClass_t::glGetnHistogram;
-  using theBaseClass_t::glGetnMinmax;
   using theBaseClass_t::glTextureBarrier;
 #endif
 
